<resources>
    <string name="app_name">AppListaCurso</string>
    <string name="txt_titulo_aplicativo_lista_vip_android">Aplicativo Lista Vip Android</string>
    <string name="txt_hint_edit_primeiro_nome">Primeiro Nome</string>
    <string name="txt_hint_edit_sobrenome">Sobrenome</string>
    <string name="txt_hint_edit_curso_desejado">Curso Desejado</string>
    <string name="txt_hint_edit_telefone_de_contato">Contato</string>
    <string name="txt_button_limpar">LIMPAR</string>
    <string name="txt_button_salvar">SALVAR</string>
    <string name="txt_button_finalizar">FINALIZAR</string>
</resources>